--- a/src/styles/config/reset.scss
+++ b/src/styles/config/reset.scss
@@ -19,6 +19,7 @@ body {
   font-stretch: var(--fst-normal);
   line-height: 1;
   color: var(--c-grey);
+  overscroll-behavior: none;
 }
 
 body {
